--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       name="keywords"
-      content="量化交易系统, 量化策略开发, 自动化交易, AI 量化, 做市系统, 跟单系统, 量化风控, AlphaTide"
+      content="量化交易系统, 量化策略开发, 自动化交易, AI 量化, 做市系统, 跟单系统, 量化风控, trading, trading bot, tradingview, trading strategy, hummingbot, freqtrade, Hyperliquid, Binance, OKX, Gateio, AlphaTide"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pddjf.com" />
