--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
       content="AlphaTide Technologies 为资金账户与量化团队提供从策略研究、回测优化到自动执行与风险管理的一站式量化基础设施。"
     />
     <meta name="twitter:image" content="https://pddjf.com/og-image.svg" />
+    <!-- GA4: pddjf.com -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9W4W1BJ26B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-9W4W1BJ26B");
+    </script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
